--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <script src="javascripts/all.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;]">
+  <body class="index" data-languages="[&quot;ruby&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -210,7 +210,6 @@
     <div class="tocify-wrapper">
       <img src="images/logo.png" alt="Logo" />
         <div class="lang-selector">
-              <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="ruby">ruby</a>
         </div>
         <div class="search">
@@ -221,7 +220,7 @@
       </div>
         <ul class="toc-footer">
             <li><a href='#'>Sign Up for a Developer Key</a></li>
-            <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
+            <li><a href='http://apibanking.com'>Quantiguous Solutions</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
@@ -229,167 +228,160 @@
       <div class="content">
         <h1 id="introduction">Introduction</h1>
 
-<p>Welcome to the Kittn API! You can use our API to access Kittn API endpoints, which can get information on various cats, kittens, and breeds in our database.</p>
+<p>Welcome to APIBanking! You can use our API to access the largest suite of services banks have to offer. </p>
 
-<p>We have language bindings in Shell, Ruby, and Python! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
+<p>We have language bindings in Shell, Ruby, and .NET! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
 
-<p>This example API documentation page was created with <a href="https://github.com/tripit/slate">Slate</a>. Feel free to edit it and use it as a base for your own API&rsquo;s documentation.</p>
+          <h1 id="getting-started">Getting Started</h1>
 
-<h1 id="authentication">Authentication</h1>
+<p>You need API keys and a user/password to get access to the API. To get keys, you can register at the <a href="http://quantiguous.com">developer portal</a>.</p>
 
-<blockquote>
-<p>To authorize, use this code:</p>
-</blockquote>
-<pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
+<p>The API key and user/password is to be included in all API requets in a header that looks like the following:</p>
 
-<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
-</code></pre><pre class="highlight python tab-python"><code><span class="kn">import</span> <span class="nn">kittn</span>
+<p><code class="prettyprint">X-IBM-Client-Id: your-key-here</code></p>
 
-<span class="n">api</span> <span class="o">=</span> <span class="n">kittn</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="s">'meowmeowmeow'</span><span class="p">)</span>
-</code></pre><pre class="highlight shell tab-shell"><code><span class="c"># With shell, you can just pass the correct header with each request</span>
-curl <span class="s2">"api_endpoint_here"</span>
-  -H <span class="s2">"Authorization: meowmeowmeow"</span>
-</code></pre><pre class="highlight javascript tab-javascript"><code><span class="kr">const</span> <span class="nx">kittn</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'kittn'</span><span class="p">);</span>
+<p><code class="prettyprint">X-IBM-Client-Secret: your-secret-here</code></p>
 
-<span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
-</code></pre>
-<blockquote>
-<p>Make sure to replace <code class="prettyprint">meowmeowmeow</code> with your API key.</p>
-</blockquote>
-
-<p>Kittn uses API keys to allow access to the API. You can register a new Kittn API key at our <a href="http://example.com/developers">developer portal</a>.</p>
-
-<p>Kittn expects for the API key to be included in all API requests to the server in a header that looks like the following:</p>
-
-<p><code class="prettyprint">Authorization: meowmeowmeow</code></p>
+<p><code class="prettyprint">Authorization: your-user:your-password</code></p>
 
 <aside class="notice">
-You must replace <code>meowmeowmeow</code> with your personal API key.
+You must replace <code>your-key-here</code> with your API key,  <code>your-secret-here</code> with our API secret, and <code>your-user:your-password</code> with the base64 encoded user and password.
 </aside>
 
-<h1 id="kittens">Kittens</h1>
+          <h1 id="transfer">Transfer</h1>
+<pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'api_banking'</span>
 
-<h2 id="get-all-kittens">Get All Kittens</h2>
-<pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
+<span class="n">env</span> <span class="o">=</span> <span class="no">ApiBanking</span><span class="o">::</span><span class="no">Environment</span><span class="o">::</span><span class="no">YBL</span><span class="o">::</span><span class="no">UAT</span><span class="p">.</span><span class="nf">new</span><span class="p">(</span><span class="no">ENV</span><span class="p">[</span><span class="s1">'API_UAT_USER'</span><span class="p">],</span> <span class="no">ENV</span><span class="p">[</span><span class="s1">'API_UAT_PASSWORD'</span><span class="p">],</span> <span class="no">ENV</span><span class="p">[</span><span class="s1">'API_UAT_CLIENT_ID'</span><span class="p">],</span> <span class="no">ENV</span><span class="p">[</span><span class="s1">'API_UAT_CLIENT_SECRET'</span><span class="p">]</span>  <span class="p">)</span>
 
-<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
-<span class="n">api</span><span class="p">.</span><span class="nf">kittens</span><span class="p">.</span><span class="nf">get</span>
-</code></pre><pre class="highlight python tab-python"><code><span class="kn">import</span> <span class="nn">kittn</span>
+<span class="n">request</span> <span class="o">=</span> <span class="no">ApiBanking</span><span class="o">::</span><span class="no">FundsTransferByCustomerService2</span><span class="o">::</span><span class="no">Transfer</span><span class="o">::</span><span class="no">Request</span><span class="p">.</span><span class="nf">new</span><span class="p">()</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">uniqueRequestNo</span> <span class="o">=</span> <span class="no">SecureRandom</span><span class="p">.</span><span class="nf">uuid</span><span class="p">.</span><span class="nf">gsub!</span><span class="p">(</span><span class="s1">'-'</span><span class="p">,</span><span class="s1">''</span><span class="p">)</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">appID</span> <span class="o">=</span> <span class="s1">'APP12'</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">purposeCode</span> <span class="o">=</span> <span class="s1">'PC01'</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">customerID</span> <span class="o">=</span> <span class="s1">'000000'</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">debitAccountNo</span> <span class="o">=</span> <span class="s1">'00001234567890'</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">transferType</span> <span class="o">=</span> <span class="s1">'NEFT'</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">transferAmount</span> <span class="o">=</span> <span class="mi">20</span>
+<span class="n">request</span><span class="p">.</span><span class="nf">remitterToBeneficiaryInfo</span> <span class="o">=</span> <span class="s1">'FUND TRANSFER'</span>
 
-<span class="n">api</span> <span class="o">=</span> <span class="n">kittn</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="s">'meowmeowmeow'</span><span class="p">)</span>
-<span class="n">api</span><span class="o">.</span><span class="n">kittens</span><span class="o">.</span><span class="n">get</span><span class="p">()</span>
-</code></pre><pre class="highlight shell tab-shell"><code>curl <span class="s2">"http://example.com/api/kittens"</span>
-  -H <span class="s2">"Authorization: meowmeowmeow"</span>
-</code></pre><pre class="highlight javascript tab-javascript"><code><span class="kr">const</span> <span class="nx">kittn</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'kittn'</span><span class="p">);</span>
-
-<span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
-<span class="kd">let</span> <span class="nx">kittens</span> <span class="o">=</span> <span class="nx">api</span><span class="p">.</span><span class="nx">kittens</span><span class="p">.</span><span class="nx">get</span><span class="p">();</span>
+<span class="n">response</span> <span class="o">=</span> <span class="no">ApiBanking</span><span class="o">::</span><span class="no">FundsTransferByCustomerService2</span><span class="p">.</span><span class="nf">.</span><span class="n">transfer</span><span class="p">(</span><span class="n">env</span><span class="p">,</span> <span class="n">request</span><span class="p">)</span>
 </code></pre>
-<blockquote>
-<p>The above command returns JSON structured like this:</p>
-</blockquote>
-<pre class="highlight json tab-json"><code><span class="p">[</span><span class="w">
-  </span><span class="p">{</span><span class="w">
-    </span><span class="s2">"id"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Fluffums"</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"breed"</span><span class="p">:</span><span class="w"> </span><span class="s2">"calico"</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"fluffiness"</span><span class="p">:</span><span class="w"> </span><span class="mi">6</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"cuteness"</span><span class="p">:</span><span class="w"> </span><span class="mi">7</span><span class="w">
-  </span><span class="p">},</span><span class="w">
-  </span><span class="p">{</span><span class="w">
-    </span><span class="s2">"id"</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Max"</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"breed"</span><span class="p">:</span><span class="w"> </span><span class="s2">"unknown"</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"fluffiness"</span><span class="p">:</span><span class="w"> </span><span class="mi">5</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"cuteness"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="w">
-  </span><span class="p">}</span><span class="w">
-</span><span class="p">]</span><span class="w">
-</span></code></pre>
-<p>This endpoint retrieves all kittens.</p>
+<p>To transfer</p>
 
 <h3 id="http-request">HTTP Request</h3>
 
-<p><code class="prettyprint">GET http://example.com/api/kittens</code></p>
+<p>SandBox: <code class="prettyprint">POST https://uatsky.yesbank.in/app/uat/fundsTransferByCustomerService2HttpService</code></p>
 
-<h3 id="query-parameters">Query Parameters</h3>
+<p>Production: <code class="prettyprint">POST https://sky.yesbank.in/app/live/fundsTransferByCustomerService2HttpService</code></p>
+
+<h3 id="parameters">Parameters</h3>
 
 <table><thead>
 <tr>
 <th>Parameter</th>
-<th>Default</th>
+<th>Type</th>
 <th>Description</th>
 </tr>
 </thead><tbody>
 <tr>
-<td>include_cats</td>
-<td>false</td>
-<td>If set to true, the result will also include cats.</td>
+<td>version</td>
+<td>string(1,5)</td>
+<td>The service version should be 1.</td>
 </tr>
 <tr>
-<td>available</td>
-<td>true</td>
-<td>If set to false, the result will include kittens that have already been adopted.</td>
+<td>uniqueRequestNo</td>
+<td>string(1, 32)</td>
+<td>A unique request no, to be assigned to each request.</td>
+</tr>
+<tr>
+<td>appID</td>
+<td>string(2, 6)</td>
+<td>An app-code that is assigned to you by the bank.</td>
+</tr>
+<tr>
+<td>purposeCode</td>
+<td>string(2, 2)</td>
+<td>A code that identifies the purpose of the transfer</td>
+</tr>
+<tr>
+<td>customerID</td>
+<td>string(1, 10)</td>
+<td>A code assigned to you by the bank.</td>
+</tr>
+<tr>
+<td>debitAccountNo</td>
+<td>string(10, 16)</td>
+<td>Your account number</td>
+</tr>
+<tr>
+<td>beneficiary/beneficiaryCode</td>
+<td>string(1, 5)</td>
+<td>A code assigned to the registered beneficiary</td>
+</tr>
+<tr>
+<td>transferType</td>
+<td>string(5, 5)</td>
+<td>The code that identifies the method of transfer.</td>
+</tr>
+<tr>
+<td>transferCurrencyCode</td>
+<td>string(3)</td>
+<td>Fixed to INR</td>
+</tr>
+<tr>
+<td>transferAmount</td>
+<td>decimal(30, 2)</td>
+<td>The amount to transfer</td>
+</tr>
+<tr>
+<td>remitterToBeneficiaryInfo</td>
+<td>string(2, 120)</td>
+<td>A message to send to the beneficiary</td>
 </tr>
 </tbody></table>
 
-<aside class="success">
-Remember — a happy kitten is an authenticated kitten!
-</aside>
-
-<h2 id="get-a-specific-kitten">Get a Specific Kitten</h2>
-<pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
-
-<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
-<span class="n">api</span><span class="p">.</span><span class="nf">kittens</span><span class="p">.</span><span class="nf">get</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
-</code></pre><pre class="highlight python tab-python"><code><span class="kn">import</span> <span class="nn">kittn</span>
-
-<span class="n">api</span> <span class="o">=</span> <span class="n">kittn</span><span class="o">.</span><span class="n">authorize</span><span class="p">(</span><span class="s">'meowmeowmeow'</span><span class="p">)</span>
-<span class="n">api</span><span class="o">.</span><span class="n">kittens</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
-</code></pre><pre class="highlight shell tab-shell"><code>curl <span class="s2">"http://example.com/api/kittens/2"</span>
-  -H <span class="s2">"Authorization: meowmeowmeow"</span>
-</code></pre><pre class="highlight javascript tab-javascript"><code><span class="kr">const</span> <span class="nx">kittn</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'kittn'</span><span class="p">);</span>
-
-<span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
-<span class="kd">let</span> <span class="nx">max</span> <span class="o">=</span> <span class="nx">api</span><span class="p">.</span><span class="nx">kittens</span><span class="p">.</span><span class="nx">get</span><span class="p">(</span><span class="mi">2</span><span class="p">);</span>
-</code></pre>
-<blockquote>
-<p>The above command returns JSON structured like this:</p>
-</blockquote>
-<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
-  </span><span class="s2">"id"</span><span class="p">:</span><span class="w"> </span><span class="mi">2</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Max"</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"breed"</span><span class="p">:</span><span class="w"> </span><span class="s2">"unknown"</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"fluffiness"</span><span class="p">:</span><span class="w"> </span><span class="mi">5</span><span class="p">,</span><span class="w">
-  </span><span class="s2">"cuteness"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="w">
-</span><span class="p">}</span><span class="w">
-</span></code></pre>
-<p>This endpoint retrieves a specific kitten.</p>
-
-<aside class="warning">Inside HTML code blocks like this one, you can&rsquo;t use Markdown, so use <code>&lt;code&gt;</code> blocks to denote code.</aside>
-
-<h3 id="http-request">HTTP Request</h3>
-
-<p><code class="prettyprint">GET http://example.com/kittens/&lt;ID&gt;</code></p>
-
-<h3 id="url-parameters">URL Parameters</h3>
+<h2 id="transfer-methods">Transfer Methods</h2>
 
 <table><thead>
 <tr>
-<th>Parameter</th>
-<th>Description</th>
+<th>Transfer Type</th>
+<th>Network</th>
 </tr>
 </thead><tbody>
 <tr>
-<td>ID</td>
-<td>The ID of the kitten to retrieve</td>
+<td>IMPS</td>
+<td>The Immediate Payment Service, avaialble 24x7</td>
+</tr>
+<tr>
+<td>NEFT</td>
+<td>The National Electronic Funds Transfer, available during business hours, settles every 2 hours</td>
+</tr>
+<tr>
+<td>RTGS</td>
+<td>The Real Time Gross Settlement, available during business hours, settles every 10 mins</td>
+</tr>
+<tr>
+<td>APBS</td>
+<td>The Aadhaar Payment Bridge System, settles once a day</td>
+</tr>
+<tr>
+<td>UPI</td>
+<td>The Unified Payment Interface, available 24x7</td>
+</tr>
+<tr>
+<td>FT</td>
+<td>To transfer within the bank</td>
+</tr>
+<tr>
+<td>ANY</td>
+<td>Chooses the fastest available method available</td>
+</tr>
+<tr>
+<td>THRIFTY</td>
+<td>Chooses the cheapest available method available</td>
 </tr>
 </tbody></table>
 
-          <h1 id="errors">Errors</h1>
-
-<aside class="notice">This error section is stored in a separate file in `includes/_errors.md`. Slate allows you to optionally separate out your docs into many files&hellip;just save them to the `includes` folder and add them to the top of your `index.md`&lsquo;s frontmatter. Files are included in the order listed.</aside>
-
-<p>The Kittn API uses the following error codes:</p>
+<h2 id="errors">Errors</h2>
 
 <table><thead>
 <tr>
@@ -446,7 +438,6 @@ Remember — a happy kitten is an authenticated kitten!
       </div>
       <div class="dark-box">
           <div class="lang-selector">
-                <a href="#" data-language-name="shell">shell</a>
                 <a href="#" data-language-name="ruby">ruby</a>
           </div>
       </div>
